--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: java
 jdk:
 - openjdk8
-script: ant build
+
+addons: 
+ sonarcloud:
+  organization: federicavil 
+  token: 00d1223d1041bc3bade4c92828a599f498848882
+
+script: 
+-ant build
+-sonar-scanner
