--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ jdk:
 
 addons: 
  sonarcloud:
-  organization: federicavil 
-  token: 00d1223d1041bc3bade4c92828a599f498848882
+  organization: "federicavil"
+  token: "00d1223d1041bc3bade4c92828a599f498848882"
 
 script: 
 -ant build
