--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: java
 jdk:
 - openjdk8
 
-addons: 
-	sonarcloud:
-		organization: "federicavil"
-		token: "00d1223d1041bc3bade4c92828a599f498848882"
+addons:
+    sonarcloud:
+        organization: federicavil
+        token: 00d1223d1041bc3bade4c92828a599f498848882
 
 script: 
 -ant build
