--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,33 @@
 sonar.projectKey=federicavil_Peak_test
 sonar.organization=federicavil
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Peak_test
-#sonar.projectVersion=1.0
+# =====================================================
+#   Meta-data for the project
+# =====================================================
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.links.homepage=https://github.com/federicavil/Peak_test
+sonar.links.ci=https://travis-ci.org/federicavil/Peak_test
+sonar.links.scm=https://github.com/federicavil/Peak_test
+sonar.links.issue=https://github.com/federicavil/Peak_test/issues
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+
+# =====================================================
+#   Properties that will be shared amongst all modules
+# =====================================================
+
+sonar.host.url=https://sonarcloud.io
+sonar.organization=federicavil
+sonar.login=00d1223d1041bc3bade4c92828a599f498848882
+sonar.sources=src
+sonar.language=java
+
+
+
+# =====================================================
+#   Java config
+# =====================================================
+sonar.java.source=1.8
+sonar.java.binaries=.
+
+# Debug
+sonar.verbose=true
