--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=federicavil_Peak_test
-sonar.organization=federicavil
+sonar.projectName=Peak_test
 
 # =====================================================
 #   Meta-data for the project
