--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
-sonar.projectKey=federicavil_Peak_test
-sonar.projectName=Peak_test
+sonar.projectKey=federicavil_PeakTest
+sonar.projectName=PeakTest
 
 # =====================================================
 #   Meta-data for the project
 # =====================================================
 
-sonar.links.homepage=https://github.com/federicavil/Peak_test
-sonar.links.ci=https://travis-ci.org/federicavil/Peak_test
-sonar.links.scm=https://github.com/federicavil/Peak_test
-sonar.links.issue=https://github.com/federicavil/Peak_test/issues
+sonar.links.homepage=https://github.com/federicavil/PeakTest
+sonar.links.ci=https://travis-ci.org/federicavil/PeakTest
+sonar.links.scm=https://github.com/federicavil/PeakTest
+sonar.links.issue=https://github.com/federicavil/PeakTest/issues
 
 
 # =====================================================
