--- a/pom.xml
+++ b/pom.xml
@@ -33,4 +33,11 @@
   		</dependency>
   	</dependencies>
   </dependencyManagement>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.google.firebase</groupId>
+  		<artifactId>firebase-admin</artifactId>
+  		<version>7.1.0</version>
+  	</dependency>
+  </dependencies>
 </project>
